Added Back Button

--- a/templates/results.html
+++ b/templates/results.html
@@ -58,6 +58,9 @@
 
 	</div>
 
+	<div id="back-button">
+		<a href="{{url_for('home')}}" class="btn btn-primary btn-md">Back</a>
+	</div>
 	<p> No thanks to @ e s o t e r i i k o s </p>
 </body>
 </html>
