--- a/templates/home.html
+++ b/templates/home.html
@@ -1,74 +1,66 @@
 <!DOCTYPE html>
-<head>
-	<meta charset="UTF-8">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	
-	<script>
-		function reloadPage() {
-			location.reload();
-			$("#error").hide();
-		}
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		function showLoading() {
-			$("#dropzone").hide();
-			$("#error").hide();
-			$("#loading").show();
-		}
-	</script>
+		<link href="https://fonts.googleapis.com/css?family=B612&display=swap" rel="stylesheet">
 
-	<link href="https://fonts.googleapis.com/css?family=B612&display=swap" rel="stylesheet">
+		<!-- Bootstrap 4.4.1 -->
+		<link rel="stylesheet" type="text/css" href="/static/lib/bootstrap.min.css"></link>
 
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-		
-	{{ dropzone.load_css() }}
-	{{ dropzone.style('border: 2px dashed #0087F7; margin: 3%;') }}
+		{{ dropzone.load_css() }}
+		{{ dropzone.style('border: 2px dashed #0087F7; margin: 3%;') }}
 
-	<title> Emotion Recognizer </title>
-	<link rel = "icon" href = "/static/Thonking_Face.png" type = "image/x-icon"> 
-</head>
+		<title> Emotion Recognizer </title>
+		<link rel = "icon" href = "/static/Thonking_Face.png" type = "image/x-icon">
+	</head>
 
-<body class="text-center bg-light text-dark" onunload="reloadPage();"> <!-- onunload = Loading page using backspace -->
+	<!-- 
+		onunload = User backspaces to reach home page
+		onload = Home Page loads properly
+		When user backspaces to reach home page, reloadPage method gets triggered which clears error message
+	-->
+	<body class="homePage text-center bg-light text-dark" onunload="reloadPage();"> 
 
-	{% if error %}
-		<div id="error" class="alert alert-danger">
-			<h3><strong>Error:</strong> <a href="#" class="alert-link"> {{ error }} </a> </h3>
+		{% if error %}
+			<div id="error" class="alert alert-danger">
+				<h3><strong>Error:</strong> <a href="#" class="alert-link"> {{ error }} </a> </h3>
+			</div>
+		{% endif %}
+
+		<div class="container" style="font-family: 'B612', sans-serif;">
+			<h1> EMOTION RECOGNIZER </h1>
+			<h4> Works for images as well as videos </h4>
+			<img src="/static/bkgrnd.jpg" > 
 		</div>
-	{% endif %}
 
-	<div class="container" style="font-family: 'B612', sans-serif;">
-		<h1> EMOTION RECOGNIZER </h1>
-		<h4> Works for images as well as videos </h4>
-		<img src="/static/bkgrnd.jpg" > 
-	</div>
+		<div id="dropzone" class="container">
+			{{dropzone.create(action='upload_file')}}
+			{{dropzone.load_js()}}
+			{{dropzone.config()}}
 
-	<div id="dropzone" class="container">
-		{{dropzone.create(action='upload_file')}}
-		{{dropzone.load_js()}}
-		{{dropzone.config()}}
+			<!-- The onsubmit event first sends POST request to jobs, then showLoading() then starts polling function -->
+			<a class="btn btn-primary btn-lg" id="results">Display Results</a>
 
+			<p> <i> file formats supported, for images, 'bmp', 'jpg', 'png', 'jpeg', for videos, 'mp4', 'avi', 'wmv', 'flv', 'mpeg' </i> </p>
+		</div>
 
+		<div id="loading" class="container" style="display:none; margin: 5% auto 2%;">
+			<div class="spinner-border text-success"></div>
+			<div class="spinner-grow text-success"></div>
+			<div class="spinner-border text-success"></div>
+			<h2 style="color:green"> LOADING... </h2>
+			<div class="spinner-grow text-success"></div>
+			<div class="spinner-border text-success"></div>
+			<div class="spinner-grow text-success"></div>
+		</div>
 
-		<!-- Add onsubmit event to this button and avoid submitting via the url_for method -->
-		<!-- The onsubmit event first sends POST request to jobs, then showLoading() then starts polling function -->
+		<p> No thanks to @ e s o t e r i i k o s </p>
 
-		<a href="{{url_for('jobs')}}" class="btn btn-primary btn-lg" onclick="showLoading();">Display Results</a>
+		<!-- JQuery 3.6.0 -->
+		<script src="/static/lib/jquery-3.6.0.min.js"></script>
 
-
-
-		<p> <i> file formats supported, for images, 'bmp', 'jpg', 'png', 'jpeg', for videos, 'mp4', 'avi', 'wmv', 'flv', 'mpeg' </i> </p>
-	</div>
-
-	<div id="loading" class="container" style="display:none; margin: 5% auto 2%;">
-		<div class="spinner-border text-success"></div>
-		<div class="spinner-grow text-success"></div>
-		<div class="spinner-border text-success"></div>
-		<h2 style="color:green"> LOADING... </h2>
-		<div class="spinner-grow text-success"></div>
-		<div class="spinner-border text-success"></div>
-		<div class="spinner-grow text-success"></div>
-	</div>
-
-	<p> No thanks to @ e s o t e r i i k o s </p>
-</body>
+		<!-- External JS Script -->
+		<script src="/static/main.js"></script> 
+	</body>
 </html>
