Added js scripts, updated error messages and Heroku files

--- a/templates/results.html
+++ b/templates/results.html
@@ -1,4 +1,8 @@
 <style>
+	body {
+		background-color: #c7c7c7;
+	}
+
 	img {
 	    max-width:400px;
 	    max-height:480px;
@@ -8,60 +12,68 @@
 </style>
 
 <!DOCTYPE html>
-<head>
-	<meta charset="UTF-8">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	
-	<link href="https://fonts.googleapis.com/css?family=B612&display=swap" rel="stylesheet">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/css?family=B612&display=swap" rel="stylesheet">
 
-	<link rel="stylesheet" href="{{url_for('static', filename='css/new_style.css')}}">
-	
-	<title>Emotion Recognizer</title>
-	<link rel = "icon" href = "/static/Thonking_Face.png" type = "image/x-icon"> 
+		<!-- Bootstrap 4.4.1 -->
+		<link rel="stylesheet" type="text/css" href="/static/lib/bootstrap.min.css"></link>
+		
+		<!-- Title and icon to be shown on tab -->
+		<title>Emotion Recognizer</title>
+		<link rel = "icon" href = "/static/images/Thonking_Face.png" type = "image/x-icon"> 
+	</head>
 
-</head>
+	<body class="resultsPage text-center bg-light text-dark">
+		<div class="container" style="font-family: 'B612', sans-serif;">
+			<h1 class="page-header"> Emotion Recognizer </h1>
+		</div>
 
-<body class="text-center bg-light text-dark" style="background-color: #c7c7c7;">
-	<div class="container" style="font-family: 'B612', sans-serif;">
-		<h1 class="page-header"> Emotion Recognizer </h1>
-	</div>
+		<div id="outputContainer" class="container">
+			<!-- Display images and videos only if their respective lists contain something -->
+			{% if output_images %}
+				<h2 class="page-header"> Image Results </h1>
 
-	<div id="output-container" class="container">
-		<!-- Display images and videos only if their respective lists contain something -->
-		{% if output_images %}
-			<h2 class="page-header"> Image Results </h1>
-			<div id="image-container" class="row">
-				{% for img in output_images %}
-					<div class="col" style="margin-bottom: 10px;">
-						<img src="{{ url_for('send_file', file_type='image', file_name=img) }}"> 
-						<!-- Use send_image because we resized image in code, so using direct path like video wont work -->
-					</div>
-				{% endfor %}
-			</div>
-		{% endif %}
+				<div id="image-container" class="row">
+					{% for img in output_images %}
+						<div class="col" style="margin-bottom: 10px;">
+							<!-- Use send_file because we resized image in code -->
+							<img src="{{ url_for('send_file', file_type='image', file_name=img) }}"> 
+						</div>
+					{% endfor %}
+				</div>
+			{% endif %}
 
-		{% if output_videos %}
-			<div class="border-top my-3"></div> <!-- adds horizontal line between Image & Video Results -->
-			<h2 class="page-header" style="margin-top: 30px;"> Video Results </h1>
-			<div id="video-container" class="row">
-				{% for vid in output_videos %}
-					<div class="col" style="margin: auto 30px 30px 30px;">
-						<video width="320" height="240" controls>
-			                <source src="{{ url_for('send_file', file_type='video', file_name=vid) }}" type="video/webm">
-			                <!-- <source src= "/static/uploads/videos/output_videos/{{vid}}" type="video/mp4"> -->
-			            </video>
-					</div>
-				{% endfor %}
-			</div>
-		{% endif %}
+			{% if output_videos %}
+				<!-- add horizontal line between Image & Video Results -->
+				<div class="border-top my-3"></div> 
+				<h2 class="page-header" style="margin-top: 30px;"> Video Results </h1>
 
-	</div>
+				<div id="video-container" class="row">
+					{% for vid in output_videos %}
+						<div class="col" style="margin: auto 30px 30px 30px;">
+							<video width="320" height="240" controls>
+				                <source src="{{ url_for('send_file', file_type='video', file_name=vid) }}" type="video/webm">
+				            </video>
+						</div>
+					{% endfor %}
+				</div>
+			{% endif %}
+		</div>
 
-	<div id="back-button">
-		<a href="{{url_for('home')}}" class="btn btn-primary btn-md">Back</a>
-	</div>
-	<p> No thanks to @ e s o t e r i i k o s </p>
-</body>
+		<!-- Back to Home button -->
+		<div id="backButton">
+			<a href="{{url_for('home')}}" class="btn btn-primary btn-md">Back</a>
+		</div>
+
+		<p> No thanks to @ e s o t e r i i k o s </p>
+
+		<!-- JQuery 3.6.0 -->
+		<script src="/static/lib/jquery-3.6.0.min.js"></script>
+
+		<!-- External JS Script -->
+		<script src="/static/main.js"></script> 
+	</body>
 </html>
