--- a/templates/home.html
+++ b/templates/home.html
@@ -3,16 +3,22 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
+		<!-- B612 Font -->
 		<link href="https://fonts.googleapis.com/css?family=B612&display=swap" rel="stylesheet">
 
 		<!-- Bootstrap 4.4.1 -->
 		<link rel="stylesheet" type="text/css" href="/static/lib/bootstrap.min.css"></link>
 
+		<!-- Font Awesome Icons CDN -->
+		<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
+		<!-- Dropzone loading and styling -->
 		{{ dropzone.load_css() }}
 		{{ dropzone.style('border: 2px dashed #0087F7; margin: 3%;') }}
 
+		<!-- Title and icon to be shown on tab -->
 		<title> Emotion Recognizer </title>
-		<link rel = "icon" href = "/static/Thonking_Face.png" type = "image/x-icon">
+		<link rel = "icon" href = "/static/images/Thonking_Face.png" type = "image/x-icon">
 	</head>
 
 	<!-- 
@@ -21,30 +27,50 @@
 		When user backspaces to reach home page, reloadPage method gets triggered which clears error message
 	-->
 	<body class="homePage text-center bg-light text-dark" onunload="reloadPage();"> 
-
-		{% if error %}
-			<div id="error" class="alert alert-danger">
-				<h3><strong>Error:</strong> <a href="#" class="alert-link"> {{ error }} </a> </h3>
-			</div>
-		{% endif %}
-
+		<!-- Header bar -->
 		<div class="container" style="font-family: 'B612', sans-serif;">
 			<h1> EMOTION RECOGNIZER </h1>
 			<h4> Works for images as well as videos </h4>
-			<img src="/static/bkgrnd.jpg" > 
+			<img src="/static/images/bkgrnd.jpg" > 
 		</div>
 
+		<!-- Dropzone container -->
 		<div id="dropzone" class="container">
+			<!-- Dropzone configuration setup at JS end -->
+			<!-- upload_file is the URL route that will be used for uploading any file sent to dropzone to the server -->
 			{{dropzone.create(action='upload_file')}}
 			{{dropzone.load_js()}}
 			{{dropzone.config()}}
 
-			<!-- The onsubmit event first sends POST request to jobs, then showLoading() then starts polling function -->
+			<!-- 
+				This results button has an onclick event handler that will do the following,
+				Hide error message, show loading screen, send POST request to "jobs" route, 
+				Once request successfully completed, start poller function, else redirect with appropriate error code
+			 -->
 			<a class="btn btn-primary btn-lg" id="results">Display Results</a>
+
+			<!-- Error message div -->
+			{% if error %}
+				<div id="error">
+					<small class="alert alert-danger">
+						<span>
+							{% if error == 101 %} 
+								No file uploaded
+
+							{% else %}
+								Unauthorized access
+
+							{% endif %}
+						</span>
+						<i class="close-button fas fa-window-close"></i>
+					</small>
+				</div>
+			{% endif %}
 
 			<p> <i> file formats supported, for images, 'bmp', 'jpg', 'png', 'jpeg', for videos, 'mp4', 'avi', 'wmv', 'flv', 'mpeg' </i> </p>
 		</div>
 
+		<!-- Loading spinners -->
 		<div id="loading" class="container" style="display:none; margin: 5% auto 2%;">
 			<div class="spinner-border text-success"></div>
 			<div class="spinner-grow text-success"></div>
