--- a/templates/home.html
+++ b/templates/home.html
@@ -1,16 +1,24 @@
+<style>
+	.close-button {
+		margin-left: 5px;
+		cursor: pointer;
+		color: red;
+	}
+</style>
+
 <!DOCTYPE html>
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!-- B612 Font -->
-		<link href="https://fonts.googleapis.com/css?family=B612&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=B612&display=swap" rel="stylesheet" />
 
 		<!-- Bootstrap 4.4.1 -->
-		<link rel="stylesheet" type="text/css" href="/static/lib/bootstrap.min.css"></link>
+		<link rel="stylesheet" type="text/css" href="/static/lib/bootstrap.min.css" />
 
 		<!-- Font Awesome Icons CDN -->
-		<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+		<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
 		<!-- Dropzone loading and styling -->
 		{{ dropzone.load_css() }}
@@ -34,6 +42,24 @@
 			<img src="/static/images/bkgrnd.jpg" > 
 		</div>
 
+		<!-- Error message div -->
+		{% if error %}
+			<div id="error">
+				<div class="alert alert-danger" style="margin-top: 20px; display: inline-block;">
+					<span>
+						{% if error == '101' %} 
+							No file uploaded
+
+						{% else %}
+							Unauthorized access
+
+						{% endif %}
+					</span>
+					<i class="close-button fas fa-window-close"></i>
+				</div>
+			</div>
+		{% endif %}
+
 		<!-- Dropzone container -->
 		<div id="dropzone" class="container">
 			<!-- Dropzone configuration setup at JS end -->
@@ -41,34 +67,16 @@
 			{{dropzone.create(action='upload_file')}}
 			{{dropzone.load_js()}}
 			{{dropzone.config()}}
-
-			<!-- 
-				This results button has an onclick event handler that will do the following,
-				Hide error message, show loading screen, send POST request to "jobs" route, 
-				Once request successfully completed, start poller function, else redirect with appropriate error code
-			 -->
-			<a class="btn btn-primary btn-lg" id="results">Display Results</a>
-
-			<!-- Error message div -->
-			{% if error %}
-				<div id="error">
-					<small class="alert alert-danger">
-						<span>
-							{% if error == 101 %} 
-								No file uploaded
-
-							{% else %}
-								Unauthorized access
-
-							{% endif %}
-						</span>
-						<i class="close-button fas fa-window-close"></i>
-					</small>
-				</div>
-			{% endif %}
-
-			<p> <i> file formats supported, for images, 'bmp', 'jpg', 'png', 'jpeg', for videos, 'mp4', 'avi', 'wmv', 'flv', 'mpeg' </i> </p>
 		</div>
+
+		<!-- 
+			This results button has an onclick event handler that will do the following,
+			Hide error message, show loading screen, send POST request to "jobs" route, 
+			Once request successfully completed, start poller function, else redirect with appropriate error code
+		 -->
+		<a class="btn btn-primary btn-lg text-light" id="results">Display Results</a>
+
+		<p> <i> file formats supported, for images, 'bmp', 'jpg', 'png', 'jpeg', for videos, 'mp4', 'avi', 'wmv', 'flv', 'mpeg' </i> </p>
 
 		<!-- Loading spinners -->
 		<div id="loading" class="container" style="display:none; margin: 5% auto 2%;">
