--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,3 @@
-<style>
-	.close-button {
-		margin-left: 5px;
-		cursor: pointer;
-		color: red;
-	}
-</style>
-
 <!DOCTYPE html>
 	<head>
 		<meta charset="UTF-8">
@@ -24,6 +16,9 @@
 		{{ dropzone.load_css() }}
 		{{ dropzone.style('border: 2px dashed #0087F7; margin: 3%;') }}
 
+		<!-- External CSS Script -->
+		<link rel="stylesheet" type="text/css" href="/static/main.css">
+
 		<!-- Title and icon to be shown on tab -->
 		<title> Emotion Recognizer </title>
 		<link rel = "icon" href = "/static/images/Thonking_Face.png" type = "image/x-icon">
@@ -36,7 +31,7 @@
 	-->
 	<body class="homePage text-center bg-light text-dark" onunload="reloadPage();"> 
 		<!-- Header bar -->
-		<div class="container" style="font-family: 'B612', sans-serif;">
+		<div class="container" id="header">
 			<h1> EMOTION RECOGNIZER </h1>
 			<h4> Works for images as well as videos </h4>
 			<img src="/static/images/bkgrnd.jpg" > 
@@ -44,19 +39,17 @@
 
 		<!-- Error message div -->
 		{% if error %}
-			<div id="error">
-				<div class="alert alert-danger" style="margin-top: 20px; display: inline-block;">
-					<span>
-						{% if error == '101' %} 
-							No file uploaded
+			<div id="error" class="alert alert-danger">
+				<span>
+					{% if error == '101' %} 
+						No file uploaded
 
-						{% else %}
-							Unauthorized access
+					{% else %}
+						Unauthorized access
 
-						{% endif %}
-					</span>
-					<i class="close-button fas fa-window-close"></i>
-				</div>
+					{% endif %}
+				</span>
+				<i class="close-button fas fa-window-close"></i>
 			</div>
 		{% endif %}
 
@@ -76,10 +69,10 @@
 		 -->
 		<a class="btn btn-primary btn-lg text-light" id="results">Display Results</a>
 
-		<p> <i> file formats supported, for images, 'bmp', 'jpg', 'png', 'jpeg', for videos, 'mp4', 'avi', 'wmv', 'flv', 'mpeg' </i> </p>
+		<p> <i> file formats supported, <br> for images, 'bmp', 'jpg', 'png', 'jpeg' <br> for videos, 'mp4', 'avi', 'wmv', 'flv', 'mpeg' </i> </p>
 
 		<!-- Loading spinners -->
-		<div id="loading" class="container" style="display:none; margin: 5% auto 2%;">
+		<div id="loading" class="container">
 			<div class="spinner-border text-success"></div>
 			<div class="spinner-grow text-success"></div>
 			<div class="spinner-border text-success"></div>
@@ -89,7 +82,7 @@
 			<div class="spinner-grow text-success"></div>
 		</div>
 
-		<p> No thanks to @ e s o t e r i i k o s </p>
+		<p> No thanks to <a href="https://github.com/Esoteriikos">@ e s o t e r i i k o s</a></p>
 
 		<!-- JQuery 3.6.0 -->
 		<script src="/static/lib/jquery-3.6.0.min.js"></script>
