--- a/templates/results.html
+++ b/templates/results.html
@@ -1,16 +1,3 @@
-<style>
-	body {
-		background-color: #c7c7c7;
-	}
-
-	img {
-	    max-width:400px;
-	    max-height:480px;
-	    width:auto;
-	    height:auto;
-	}
-</style>
-
 <!DOCTYPE html>
 	<head>
 		<meta charset="UTF-8">
@@ -20,6 +7,9 @@
 
 		<!-- Bootstrap 4.4.1 -->
 		<link rel="stylesheet" type="text/css" href="/static/lib/bootstrap.min.css"></link>
+
+		<!-- External CSS Script -->
+		<link rel="stylesheet" type="text/css" href="/static/main.css">
 		
 		<!-- Title and icon to be shown on tab -->
 		<title>Emotion Recognizer</title>
@@ -27,20 +17,21 @@
 	</head>
 
 	<body class="resultsPage text-center bg-light text-dark">
-		<div class="container" style="font-family: 'B612', sans-serif;">
+		<div id="header" class="container">
 			<h1 class="page-header"> Emotion Recognizer </h1>
 		</div>
 
 		<div id="outputContainer" class="container">
 			<!-- Display images and videos only if their respective lists contain something -->
+
 			{% if output_images %}
 				<h2 class="page-header"> Image Results </h1>
 
 				<div id="image-container" class="row">
 					{% for img in output_images %}
-						<div class="col" style="margin-bottom: 10px;">
+						<div class="col img-col">
 							<!-- Use send_file because we resized image in code -->
-							<img src="{{ url_for('send_file', file_type='image', file_name=img) }}"> 
+							<img class="output-img" src="{{ url_for('send_file', file_type='image', file_name=img) }}"> 
 						</div>
 					{% endfor %}
 				</div>
@@ -53,7 +44,7 @@
 
 				<div id="video-container" class="row">
 					{% for vid in output_videos %}
-						<div class="col" style="margin: auto 30px 30px 30px;">
+						<div class="col vid-col">
 							<video width="320" height="240" controls>
 				                <source src="{{ url_for('send_file', file_type='video', file_name=vid) }}" type="video/webm">
 				            </video>
@@ -68,7 +59,7 @@
 			<a href="{{url_for('home')}}" class="btn btn-primary btn-md">Back</a>
 		</div>
 
-		<p> No thanks to @ e s o t e r i i k o s </p>
+		<p><a href="https://github.com/Esoteriikos"> No thanks to @ e s o t e r i i k o s </a></p>
 
 		<!-- JQuery 3.6.0 -->
 		<script src="/static/lib/jquery-3.6.0.min.js"></script>
